--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hr-worker
-server.port=${PORT:0}
+server.port=3003
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
