--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=3003
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://hr-eureka-server:8761/eureka
 
