--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hr-oauth
-server.port=3001
-#${PORT:0}
+#server.port=3001
+${PORT:0}
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
